--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -8,9 +8,9 @@
 
 window {
     margin: 0px;
-    border: 2px solid #5f7c8a;
+    border: 2px solid #7aa2f7;
     /* Accent Border */
-    background-color: rgba(15, 15, 15, 0.6);
+    background-color: rgba(26, 27, 38, 0.9);
     /* Transparent */
     border-radius: 8px;
 }
@@ -35,7 +35,7 @@ window {
 }
 
 #entry:selected {
-    background-color: #5f7c8a;
+    background-color: #7aa2f7;
     /* V9 Accent */
     color: #ffffff;
 }
